<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MedicationFormFragment">

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="630dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.545">

        <TextView
            android:id="@+id/med_form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/med_form"
            android:textColor="#2196F3"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/med_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:text="@string/med_name"
            android:textColor="#2196F3" />


        <EditText
            android:id="@+id/med_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/med_name_hint"
            android:textColor="#0E0E0E" />

        <TextView
            android:id="@+id/med_dosage_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/med_dosage"
            android:textColor="#2196F3" />

        <EditText
            android:id="@+id/med_dosage_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/med_dosage_hint"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/med_doctor_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/med_doctor"
            android:textColor="#2196F3" />

        <EditText
            android:id="@+id/med_doctor_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/med_doctor_hint"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/med_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/med_date"
            android:textColor="#2196F3" />

        <EditText
            android:id="@+id/med_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Prescribed Date"
            android:inputType="textPersonName"
            android:textColor="#000000" />

        <Button
            android:id="@+id/setReminders"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:text="Set Reminders" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
